# serializer version: 1
# name: test_parse_albums[infest]
  dict({
    'album_type': 'unknown',
    'artists': list([
      dict({
        'available': True,
        'external_ids': list([
        ]),
        'image': None,
        'item_id': 'e439648e08ade14e27d5de48fa97c88e',
        'media_type': 'artist',
        'name': 'Papa Roach',
        'provider': 'xx-instance-id-xx',
        'sort_name': 'papa roach',
        'uri': 'xx-instance-id-xx://artist/e439648e08ade14e27d5de48fa97c88e',
        'version': '',
      }),
    ]),
    'external_ids': list([
      list([
        'musicbrainz_albumid',
        'bf25b030-0cbb-495a-8d79-6c7fee20a089',
      ]),
      list([
        'musicbrainz_releasegroupid',
        '0193355a-cdfb-3936-afd2-44d651eb006d',
      ]),
    ]),
    'favorite': False,
    'item_id': '70b7288088b42d318f75dbcc41fd0091',
    'media_type': 'album',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'images': list([
        dict({
          'path': 'http://localhost:1234/Items/70b7288088b42d318f75dbcc41fd0091/Images/Primary?api_key=ACCESS_TOKEN',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'last_refresh': None,
      'links': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'review': None,
      'style': None,
    }),
    'name': 'Infest',
    'position': None,
    'provider': 'jellyfin',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'item_id': '70b7288088b42d318f75dbcc41fd0091',
        'provider_domain': 'jellyfin',
        'provider_instance': 'xx-instance-id-xx',
        'url': None,
      }),
    ]),
    'sort_name': 'infest',
    'uri': 'jellyfin://album/70b7288088b42d318f75dbcc41fd0091',
    'version': '',
    'year': 2000,
  })
# ---
# name: test_parse_albums[this_is_christmas]
  dict({
    'album_type': 'unknown',
    'artists': list([
      dict({
        'available': True,
        'external_ids': list([
        ]),
        'image': None,
        'item_id': '555b36f7d310d1b7405557a8775c6878',
        'media_type': 'artist',
        'name': 'Emmy the Great & Tim Wheeler',
        'provider': 'xx-instance-id-xx',
        'sort_name': 'emmy the great & tim wheeler',
        'uri': 'xx-instance-id-xx://artist/555b36f7d310d1b7405557a8775c6878',
        'version': '',
      }),
    ]),
    'external_ids': list([
      list([
        'musicbrainz_albumid',
        'b13a174d-527d-44a1-b8f8-a4c78b03b7d9',
      ]),
      list([
        'musicbrainz_releasegroupid',
        'f002d6b7-17af-4f9e-8d30-5486548ffe6f',
      ]),
    ]),
    'favorite': False,
    'item_id': '32ed6a0091733dcff57eae67010f3d4b',
    'media_type': 'album',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'images': list([
        dict({
          'path': 'http://localhost:1234/Items/32ed6a0091733dcff57eae67010f3d4b/Images/Primary?api_key=ACCESS_TOKEN',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'last_refresh': None,
      'links': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'review': None,
      'style': None,
    }),
    'name': 'This Is Christmas',
    'position': None,
    'provider': 'jellyfin',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'item_id': '32ed6a0091733dcff57eae67010f3d4b',
        'provider_domain': 'jellyfin',
        'provider_instance': 'xx-instance-id-xx',
        'url': None,
      }),
    ]),
    'sort_name': 'this is christmas',
    'uri': 'jellyfin://album/32ed6a0091733dcff57eae67010f3d4b',
    'version': '',
    'year': 2011,
  })
# ---
# name: test_parse_albums[yesterday_when_i_was_mad]
  dict({
    'album_type': 'unknown',
    'artists': list([
      dict({
        'available': True,
        'external_ids': list([
        ]),
        'image': None,
        'item_id': '[unknown]',
        'media_type': 'artist',
        'name': '[unknown]',
        'provider': 'jellyfin',
        'sort_name': '[unknown]',
        'uri': 'jellyfin://artist/[unknown]',
        'version': '',
      }),
    ]),
    'external_ids': list([
    ]),
    'favorite': False,
    'item_id': '7c8d0bd55291c7fc0451d17ebef30017',
    'media_type': 'album',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'images': list([
      ]),
      'label': None,
      'last_refresh': None,
      'links': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'review': None,
      'style': None,
    }),
    'name': 'Yesterday, When I Was Mad [Disc 2]',
    'position': None,
    'provider': 'jellyfin',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'item_id': '7c8d0bd55291c7fc0451d17ebef30017',
        'provider_domain': 'jellyfin',
        'provider_instance': 'xx-instance-id-xx',
        'url': None,
      }),
    ]),
    'sort_name': 'yesterday when i was mad [disc 0000000002]',
    'uri': 'jellyfin://album/7c8d0bd55291c7fc0451d17ebef30017',
    'version': '',
    'year': None,
  })
# ---
# name: test_parse_artists[ash]
  dict({
    'external_ids': list([
      list([
        'musicbrainz_artistid',
        '99164692-c02d-407c-81c9-25d338dd21f4',
      ]),
    ]),
    'favorite': False,
    'item_id': 'dd954bbf54398e247d803186d3585b79',
    'media_type': 'artist',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'images': list([
        dict({
          'path': 'http://localhost:1234/Items/dd954bbf54398e247d803186d3585b79/Images/Backdrop/0?api_key=ACCESS_TOKEN',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'fanart',
        }),
        dict({
          'path': 'http://localhost:1234/Items/dd954bbf54398e247d803186d3585b79/Images/Primary?api_key=ACCESS_TOKEN',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'thumb',
        }),
        dict({
          'path': 'http://localhost:1234/Items/dd954bbf54398e247d803186d3585b79/Images/Logo?api_key=ACCESS_TOKEN',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'logo',
        }),
      ]),
      'label': None,
      'last_refresh': None,
      'links': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'review': None,
      'style': None,
    }),
    'name': 'Ash',
    'position': None,
    'provider': 'jellyfin',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'content_type': '?',
          'output_format_str': '?',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'item_id': 'dd954bbf54398e247d803186d3585b79',
        'provider_domain': 'jellyfin',
        'provider_instance': 'xx-instance-id-xx',
        'url': None,
      }),
    ]),
    'sort_name': 'ash',
    'uri': 'jellyfin://artist/dd954bbf54398e247d803186d3585b79',
    'version': '',
  })
# ---
# name: test_parse_tracks[thrown_away]
  dict({
    'album': dict({
      'available': True,
      'external_ids': list([
      ]),
      'image': None,
      'item_id': '70b7288088b42d318f75dbcc41fd0091',
      'media_type': 'album',
      'name': 'Unknown Album (70b7288088b42d318f75dbcc41fd0091)',
      'provider': 'xx-instance-id-xx',
      'sort_name': 'unknown album (70b7288088b42d318f75dbcc41fd0091)',
      'uri': 'xx-instance-id-xx://album/70b7288088b42d318f75dbcc41fd0091',
      'version': '',
    }),
    'artists': list([
      dict({
        'available': True,
        'external_ids': list([
        ]),
        'image': None,
        'item_id': '[unknown]',
        'media_type': 'artist',
        'name': '[unknown]',
        'provider': 'jellyfin',
        'sort_name': '[unknown]',
        'uri': 'jellyfin://artist/[unknown]',
        'version': '',
      }),
    ]),
    'disc_number': 0,
    'duration': 577,
    'external_ids': list([
    ]),
    'favorite': False,
    'item_id': 'b5319fb11cde39fca2023184fcfa9862',
    'media_type': 'track',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'images': list([
      ]),
      'label': None,
      'last_refresh': None,
      'links': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'review': None,
      'style': None,
    }),
    'name': '11 Thrown Away',
    'position': 0,
    'provider': 'xx-instance-id-xx',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'content_type': 'mp3',
          'output_format_str': 'mp3',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'item_id': 'b5319fb11cde39fca2023184fcfa9862',
        'provider_domain': 'jellyfin',
        'provider_instance': 'xx-instance-id-xx',
        'url': 'http://localhost:1234/Audio/b5319fb11cde39fca2023184fcfa9862/universal?UserId=USER_ID&DeviceId=X&MaxStreamingBitrate=140000000&api_key=ACCESS_TOKEN',
      }),
    ]),
    'sort_name': '11 thrown away',
    'track_number': 0,
    'uri': 'xx-instance-id-xx://track/b5319fb11cde39fca2023184fcfa9862',
    'version': '',
  })
# ---
# name: test_parse_tracks[where_the_bands_are]
  dict({
    'album': None,
    'artists': list([
      dict({
        'available': True,
        'external_ids': list([
        ]),
        'image': None,
        'item_id': '94875b0dd58cbf5245a135982133651a',
        'media_type': 'artist',
        'name': 'Dead Like Harry',
        'provider': 'xx-instance-id-xx',
        'sort_name': 'dead like harry',
        'uri': 'xx-instance-id-xx://artist/94875b0dd58cbf5245a135982133651a',
        'version': '',
      }),
    ]),
    'disc_number': 1,
    'duration': 246,
    'external_ids': list([
    ]),
    'favorite': False,
    'item_id': '54918f75ee8f6c8b8dc5efd680644f29',
    'media_type': 'track',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'images': list([
        dict({
          'path': 'http://localhost:1234/Items/54918f75ee8f6c8b8dc5efd680644f29/Images/Primary?api_key=ACCESS_TOKEN',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'last_refresh': None,
      'links': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'review': None,
      'style': None,
    }),
    'name': 'Where the Bands Are (2018 Version)',
    'position': 1,
    'provider': 'xx-instance-id-xx',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'content_type': 'aac',
          'output_format_str': 'aac',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'item_id': '54918f75ee8f6c8b8dc5efd680644f29',
        'provider_domain': 'jellyfin',
        'provider_instance': 'xx-instance-id-xx',
        'url': 'http://localhost:1234/Audio/54918f75ee8f6c8b8dc5efd680644f29/universal?UserId=USER_ID&DeviceId=X&MaxStreamingBitrate=140000000&api_key=ACCESS_TOKEN',
      }),
    ]),
    'sort_name': 'where the bands are (2018 version)',
    'track_number': 1,
    'uri': 'xx-instance-id-xx://track/54918f75ee8f6c8b8dc5efd680644f29',
    'version': '',
  })
# ---
# name: test_parse_tracks[zombie_christmas]
  dict({
    'album': dict({
      'available': True,
      'external_ids': list([
      ]),
      'image': None,
      'item_id': '32ed6a0091733dcff57eae67010f3d4b',
      'media_type': 'album',
      'name': 'This Is Christmas',
      'provider': 'xx-instance-id-xx',
      'sort_name': 'this is christmas',
      'uri': 'xx-instance-id-xx://album/32ed6a0091733dcff57eae67010f3d4b',
      'version': '',
    }),
    'artists': list([
      dict({
        'available': True,
        'external_ids': list([
        ]),
        'image': None,
        'item_id': 'a0c459294295710546c81c20a8d9abfc',
        'media_type': 'artist',
        'name': 'Emmy the Great',
        'provider': 'xx-instance-id-xx',
        'sort_name': 'emmy the great',
        'uri': 'xx-instance-id-xx://artist/a0c459294295710546c81c20a8d9abfc',
        'version': '',
      }),
      dict({
        'available': True,
        'external_ids': list([
        ]),
        'image': None,
        'item_id': '1952db245ddef4e41dcd016475379190',
        'media_type': 'artist',
        'name': 'Tim Wheeler',
        'provider': 'xx-instance-id-xx',
        'sort_name': 'tim wheeler',
        'uri': 'xx-instance-id-xx://artist/1952db245ddef4e41dcd016475379190',
        'version': '',
      }),
    ]),
    'disc_number': 1,
    'duration': 224,
    'external_ids': list([
      list([
        'musicbrainz_recordingid',
        '17d1019d-d4f4-326c-b4bb-d8aec2607bd7',
      ]),
    ]),
    'favorite': False,
    'item_id': 'fb12a77f49616a9fc56a6fab2b94174c',
    'media_type': 'track',
    'metadata': dict({
      'chapters': None,
      'copyright': None,
      'description': None,
      'explicit': None,
      'genres': None,
      'images': list([
        dict({
          'path': 'http://localhost:1234/Items/fb12a77f49616a9fc56a6fab2b94174c/Images/Primary?api_key=ACCESS_TOKEN',
          'provider': 'xx-instance-id-xx',
          'remotely_accessible': False,
          'type': 'thumb',
        }),
      ]),
      'label': None,
      'last_refresh': None,
      'links': None,
      'lyrics': None,
      'mood': None,
      'performers': None,
      'popularity': None,
      'preview': None,
      'review': None,
      'style': None,
    }),
    'name': 'Zombie Christmas',
    'position': 8,
    'provider': 'xx-instance-id-xx',
    'provider_mappings': list([
      dict({
        'audio_format': dict({
          'bit_depth': 16,
          'bit_rate': 0,
          'channels': 2,
          'content_type': 'aac',
          'output_format_str': 'aac',
          'sample_rate': 44100,
        }),
        'available': True,
        'details': None,
        'item_id': 'fb12a77f49616a9fc56a6fab2b94174c',
        'provider_domain': 'jellyfin',
        'provider_instance': 'xx-instance-id-xx',
        'url': 'http://localhost:1234/Audio/fb12a77f49616a9fc56a6fab2b94174c/universal?UserId=USER_ID&DeviceId=X&MaxStreamingBitrate=140000000&api_key=ACCESS_TOKEN',
      }),
    ]),
    'sort_name': 'zombie christmas',
    'track_number': 8,
    'uri': 'xx-instance-id-xx://track/fb12a77f49616a9fc56a6fab2b94174c',
    'version': '',
  })
# ---
